force-app/main/default/objects/JCS__c/JCS__c.object-meta.xml
<CustomObject>
    <label>JCS</label>
    <nameField>
        <label>Full Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JCS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>