force-app/main/default/objects/JCS__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <label>Chapter</label>
    <length>10</length>
    <type>Text</type>
</CustomField>