force-app/main/default/objects/JCS__c/fields/Chapter_Header__c.field-meta.xml
<CustomField>
    <fullName>Chapter_Header__c</fullName>
    <label>Chapter Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>