force-app/main/default/objects/JCS__c/fields/lowerLimit__c.field-meta.xml
<CustomField>
    <fullName>lowerLimit__c</fullName>
    <label>Lower Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>