force-app/main/default/objects/JCS__c/fields/Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Paragraph__c</fullName>
    <label>Paragraph</label>
    <length>255</length>
    <type>Text</type>
</CustomField>