force-app/main/default/objects/JCS__c/fields/Paragraph_Header__c.field-meta.xml
<CustomField>
    <fullName>Paragraph_Header__c</fullName>
    <label>Paragraph Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>