force-app/main/default/objects/JCS__c/fields/Sub_paragraph__c.field-meta.xml
<CustomField>
    <fullName>Sub_paragraph__c</fullName>
    <label>Sub-paragraph</label>
    <length>255</length>
    <type>Text</type>
</CustomField>