force-app/main/default/objects/JCS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chapter__c</columns>
    <columns>Chapter_Header__c</columns>
    <columns>Section__c</columns>
    <columns>Section_Header__c</columns>
    <columns>Paragraph__c</columns>
    <columns>Paragraph_Header__c</columns>
    <columns>Sub_paragraph__c</columns>
    <columns>Description__c</columns>
    <columns>lowerLimit__c</columns>
    <columns>Upper_Limit__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>